# magic-hour-rust

./: .sdk.json  Cargo.toml  README.md  SDK_EXAMPLES.md
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml  publish-crate.yaml  publish.yml  release.yml  run-tests.yml  rust.yml
codemod/: fix-cargo-toml-versions.sh  main.sh
src/: README.md  client.rs  environment.rs  lib.rs
src/core/: auth.rs  base_client.rs  error.rs  mod.rs  params.rs  patch.rs  response.rs  upload_file.rs
src/models/: mod.rs  (+653 more)
tests/: test_v1_ai_clothes_changer_client.rs  test_v1_ai_face_editor_client.rs  test_v1_ai_gif_generator_client.rs  test_v1_ai_headshot_generator_client.rs  test_v1_ai_image_editor_client.rs  test_v1_ai_image_generator_client.rs  test_v1_ai_image_upscaler_client.rs  test_v1_ai_meme_generator_client.rs  test_v1_ai_photo_editor_client.rs  test_v1_ai_qr_code_generator_client.rs  test_v1_ai_talking_photo_client.rs  test_v1_ai_voice_cloner_client.rs  test_v1_ai_voice_generator_client.rs  test_v1_animation_client.rs  test_v1_audio_projects_client.rs  test_v1_auto_subtitle_generator_client.rs  test_v1_body_swap_client.rs  test_v1_face_detection_client.rs  test_v1_face_swap_client.rs  test_v1_face_swap_photo_client.rs  test_v1_files_upload_urls_client.rs  test_v1_head_swap_client.rs  test_v1_image_background_remover_client.rs  test_v1_image_projects_client.rs  test_v1_image_to_video_client.rs  test_v1_lip_sync_client.rs  test_v1_photo_colorizer_client.rs  test_v1_text_to_video_client.rs  test_v1_video_projects_client.rs  test_v1_video_to_video_client.rs
(+98 files in other folders)
