[package]
name = "magic_hour"
version = "0.0.8"
edition = "2021"
description = "Rust API Client"
license = "MIT"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }

[lib]
crate-type = ["lib"]
name = "magic_hour"

[dev-dependencies]
serial_test = "3.0.0"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.97"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
http = "1"
thiserror = "1.0.43"
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
